# grad

./: FolderTree.csv  README.md  package-lock.json  package.json  render.yaml
AI_Backend/medai/: .dockerignore  .env.example  Dockerfile  README.md  clinical_case_study.md  final_diagnosis_report.md  patient_triage_report.md  pyproject.toml  report.md
AI_Backend/medai/Data/guidelines/: Unconfirmed 228400.crdownload
AI_Backend/medai/Visual/: blueprint.md
AI_Backend/medai/db/: chroma.sqlite3
AI_Backend/medai/db/55fe8e75-f096-4134-a11a-8725b083238f/: index_metadata.pickle
AI_Backend/medai/knowledge/: user_preference.txt
AI_Backend/medai/logs/: result_2025-09-05_13-11-55.json  result_2025-09-05_13-26-33.json  result_2025-09-06_07-48-10.json  result_2025-09-06_10-50-07.json  result_2025-09-06_11-02-28.json  result_2025-09-07_18-26-45.json  result_2025-09-07_20-37-24.json  result_2025-09-07_21-42-06.json
AI_Backend/medai/src/medai/: api.py  chains.py  crew.py  data_ingestion.py  llms.py  main.py  memory.py  templates.py  test_generator.py  test_triage.py  utils.py
AI_Backend/medai/src/medai/config/: agents.yaml  case_generator_agents.yaml  case_generator_tasks.yaml  doctor_agents.yaml  doctor_tasks.yaml  student_agents.yaml  student_tasks.yaml  tasks.yaml  triage_agents.yaml  triage_tasks.yaml
AI_Backend/medai/src/medai/tools/: ahrq_tool.py  custom_tool.py  pubmed_tool.py  symptom_tool.py
backend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/: jest.config.js  jest.config.mjs  jest.setup.js  next.config.ts  package-lock.json  (+3 more)
(+85 files in other folders)
